--- a/frontend/src/styles/createQuiz.css
+++ b/frontend/src/styles/createQuiz.css
@@ -15,7 +15,7 @@
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-    text-decoration: underline #ffffff;
+    /* text-decoration: underline #ffffff; */
     /* margin-bottom: 8px; */
 }
 
@@ -23,6 +23,9 @@
     /* border: 2px solid red; */
     padding: 10px;
     box-shadow: 10px 5px 5px #cdd3d7;
+    height: 400px;
+    height:100vh;
+    overflow-y:scroll;
     /* width: 28%; */
 }
 
