--- a/frontend/src/styles/question.css
+++ b/frontend/src/styles/question.css
@@ -50,9 +50,7 @@ button[disabled] {
     transition: 0.5s;
 }
 
-.btn-quick-view{
-    background-color: #0077b6;
-}
+
 
 .btn-quick-view:hover:enabled {
     background-color: #33779b;
@@ -97,13 +95,33 @@ button[disabled] {
     justify-content: space-evenly;
 }
 
+.active-btn-selected{
+    background-color: #04e762;
+}
+
+.active-btn-review{
+    background-color: #f8b10b;
+}
+
+.btn-quick-view{
+    background-color: #0077b6;
+    width: 100%;
+}
+
 .btn-end{
     width: 100%;
-    /* position: absolute; */
-    background-color: #f77f00;
-    bottom: 0;
-    margin-top: 30%;
-    
+    background-color: #f77f00; 
+}
+
+.end-review{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.modal-review{
+    width: fit-content;
 }
 
 
