Edit and Delete functionalities added

--- a/frontend/src/styles/choice.css
+++ b/frontend/src/styles/choice.css
@@ -18,3 +18,9 @@
 .active-option{
     background-color: #19c1df;
 }
+
+.user-selected-badge{
+    position: absolute;
+    top: 26%;
+    right: 2%;
+}
