--- a/frontend/src/styles/EditQuiz.css
+++ b/frontend/src/styles/EditQuiz.css
@@ -2,42 +2,118 @@ p {
     display: inline;
 }
 
-.edit-form {
-    /* background-color: rgb(192, 192, 235); */
-    border-bottom: 2px solid gray;
-    margin: 20px;
-}
-
-.edit-question-input, .edit-choice-input {
-    width: 100%;
-    padding: 6px 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin: 10px 0px;
-}
-
-.edit-form-btns{
+.questions-link-container {
     display: flex;
-    column-gap: 20px;
-    justify-content: flex-end;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 93vh;
+    overflow-y: scroll;
+    /* border: 2px solid red; */
 }
 
-.edit-form-btns button{
+.edit-header{
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #14213d;
+    color: #fca311;
+    padding: 5px 20px;
+    border-radius: 5px;
+}
+
+.edit-plus-icon{
+    font-size: 23px;
+}
+
+.add-new-item{
+    padding: 3px 20px;
     border: none;
-    padding: 8px 16px;
-    margin: 8px 2px;
+    border-radius: 5%;
+    color: #e5e5e5;
+    background-color: #fca311;
+    font-weight: 800;
+    /* position: fixed; */
+    /* top: 12%; */
+    /* right: 6%; */
+    /* z-index: 1000; */
 }
 
-.edit-from-submit-btn{
-    font-size: 18px;
+.question-link {
+    border: none;
+    border-radius: 5px;
+    margin: 8px;
+    width: 70%;
+    padding: 8px;
+    font-size: larger;
     font-weight: 600;
-    color: white;
-    background-color: rgb(10, 175, 76);
+    cursor: pointer;
+    box-shadow: 0px 0px 5px #1B263B;
+    display: flex;
+    justify-content: space-between;
 }
 
-.edit-from-delete-btn{
-    font-size: 18px;
-    font-weight: 600;
-    color: white;
-    background-color: rgb(237, 67, 19);
+.edit-delete-buttons button {
+    margin: 0px 8px;
+    padding: 1px 8px;
+    border: none;
+    border-radius: 4px;
 }
+
+.question-link:hover {
+    /* padding: 8px 16px; */
+    /* margin: 8px 16px; */
+    background-color: #cbf3f0;
+    transition-delay: 0.1s;
+}
+
+.edit-btn {
+    color: white;
+    background-color: #2196f3;
+    box-shadow: 0px 0px 5px #1B263B;
+}
+
+.delete-btn {
+    color: white;
+    background-color: red;
+    box-shadow: 0px 0px 5px #1B263B;
+}
+
+.question-body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid gray;
+    color: black;
+    font-weight: 600;
+    border-radius: 8px;
+    margin: 8px 0px;
+}
+
+.edit-input-marks {
+    width: 30%;
+    display: block;
+}
+
+.edit-choice {
+    position: relative;
+}
+
+.edit-selected-badge {
+    position: absolute;
+    right: 1%;
+    top: 31%;
+}
+
+.edit-empty-img {
+    width: 100%;
+    height: 100%;
+}
+
+/* 
+ */
